# pequod

./: Cargo.toml  docker-compose.yaml
src/: errors.rs  main.rs
src/api/: base.rs  blob.rs  catalog.rs  errors.rs  manifests.rs  mod.rs  tags.rs
src/db/: mod.rs
src/db/postgres/: blobs.rs  manifests.rs  mod.rs  repositories.rs  tags.rs
src/db/postgres/migrations/: 01-create-database.sql
src/db/sqlite/: blobs.rs  manifests.rs  mod.rs  repositories.rs  tags.rs
src/db/sqlite/migrations/: 01-create-database.sql
src/ui/: mod.rs
src/ui/templates/: admin.html  index.html  repo.html
