[package]
name = "pequod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["query", "macros"] }
bytes = "1.4.0"
bytesize = "1.2.0"
chrono = { version = "0.4.24", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.7.2"
rusqlite = "0.29.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
sha256 = "1.1.2"
tera = "1.18.1"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4", "macro-diagnostics", "serde", "fast-rng"] }
